apps/windows/windows.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: windows
  namespace: windows
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windows
  template:
    metadata:
      labels:
        app: windows
    spec:
      containers:
        - name: asp-sample
          image: mcr.microsoft.com/dotnet/framework/samples:aspnetapp
          ports:
            - containerPort: 80
      tolerations:
        - key: "windows"
          operator: "Equal"
          value: "2019"
          effect: "NoSchedule"
