apps/windows/ingress.yml
#@ load("@ytt:data", "data")
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: windows
  namespace: windows
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: #@ data.values.ingress_hostname
    http:
      paths:
      - backend:
          serviceName: windows
          servicePort: http
        path: /
  tls:
  - hosts:
    - #@ data.values.ingress_hostname
    secretName: windows-tls
